tests/netedit/demandElements/route/basic/invalid_vclass/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 304 - 168
dummyVClass
TestFunctions: Clicked over position 578 - 582
TestFunctions: Clicked over position 874 - 418
bus
TestFunctions: Clicked over position 578 - 582
TestFunctions: Clicked over position 874 - 418
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Netedit closed successfully
